kube-prom-ingress/uat/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/proxy-buffer-size: "4096k"
    #nginx.ingress.kubernetes.io/proxy-body-size: 500m
    #nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    #nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    #nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    #nginx.ingress.kubernetes.io/use-http2: "true"
    #nginx.ingress.kubernetes.io/http2-push-preload: "true"
    #nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "0"
    #nginx.ingress.kubernetes.io/proxy-ssl-protocols: SSLv2
    #nginx.ingress.kubernetes.io/proxy-body-size: "50m"
  name: grafana
  labels:
    app: grafana
  namespace: monitoring
spec:
  tls:
  - hosts:
    - uatgrafana.dearxuany.com
    secretName: dearxuany-com
  rules:
  - host: "uatgrafana.dearxuany.com"
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
        path: /
